[project]
name = "slr-google-earth-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "earthengine-api>=1.7.16",
    "jupyterlab>=4.5.5",
    "matplotlib>=3.10.8",
    "nbstripout>=0.9.1",
    "netcdf4>=1.7.4",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "requests>=2.32.5",
    "xarray>=2026.2.0",
]
